[gd_scene load_steps=4 format=3 uid="uid://pqhr17c3bc63"]

[ext_resource type="Texture2D" uid="uid://c6br0j2moouev" path="res://images/block.svg" id="2_m2uq7"]
[ext_resource type="Script" path="res://scripts/scores_card.gd" id="3_rd342"]

[sub_resource type="LabelSettings" id="LabelSettings_1jp0l"]
font_size = 30

[node name="world" type="Node2D"]

[node name="Camera2D" type="Camera2D" parent="."]
anchor_mode = 0

[node name="scores" type="Control" parent="."]
custom_minimum_size = Vector2(40, 40)
layout_mode = 3
anchors_preset = 0
offset_left = 180.0
offset_top = 40.0
offset_right = 220.0
offset_bottom = 80.0
script = ExtResource("3_rd342")

[node name="score_text" type="Label" parent="scores"]
custom_minimum_size = Vector2(70, 46)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -50.0
offset_top = -20.0
offset_right = 10.0
offset_bottom = -14.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(50, 23)
text = "1234"
label_settings = SubResource("LabelSettings_1jp0l")
horizontal_alignment = 1
vertical_alignment = 1

[node name="preview_block" type="TextureRect" parent="scores"]
self_modulate = Color(0.133333, 0.133333, 0.133333, 1)
layout_mode = 0
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
texture = ExtResource("2_m2uq7")
expand_mode = 1

[node name="block_text" type="Label" parent="scores/preview_block"]
custom_minimum_size = Vector2(40, 40)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(20, 20)
text = "4096"
horizontal_alignment = 1
vertical_alignment = 1
